--- a/src/components/ProjectCard.Style.css
+++ b/src/components/ProjectCard.Style.css
@@ -1,10 +1,8 @@
 .cards-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .project-card {
   display: flex;
-  width: 40%;
-  height: 50%;
 }
