--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -1,7 +1,7 @@
 .projects-container {
   position: relative;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
   min-height: 100vh;
@@ -10,7 +10,7 @@
 }
 
 .backgroundImage {
-  height: 100%;
+  min-height: 100%;
   width: 100%;
   position: absolute;
   z-index: -1;
