--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -12,6 +12,6 @@
 .backgroundImage {
   min-height: 100%;
   width: 100%;
-  position: absolute;
+  position: absolute !important;
   z-index: -1;
 }
