--- a/src/components/subpages/Landing.Style.css
+++ b/src/components/subpages/Landing.Style.css
@@ -7,22 +7,58 @@
   height: 100vh;
   width: 100vw;
   border-bottom: 10px solid black;
-  color: rgb(228, 168, 208);
 }
 
 .backgroundImage {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
+  max-height: 1000;
+
+  background-position: top right;
   position: absolute !important;
   z-index: -1;
 }
 
 .content {
   display: flex;
+  transform: translateX(-10%);
+  padding: 2em;
 }
 
-.skills {
-  display: flex;
-  height: 30vh;
-  width: 60vw;
+.header {
+  color: rgb(231, 117, 231);
+  font-family: "droid sans mono";
+  margin-bottom: 3em;
+}
+
+.name {
+  font-size: clamp(1.5rem, 10vw, 4rem);
+  font-family: "montserrat";
+  font-weight: 800;
+}
+
+.title {
+  font-family: "montserrat";
+}
+
+.name.dark {
+  color: aliceblue;
+}
+
+.name.light {
+  color: #6f6f6f;
+}
+
+.title.dark {
+  color: aliceblue;
+}
+
+.title.light {
+  color: #6f6f6f;
+}
+
+@media (min-width: 500px) {
+  .content {
+    transform: translateX(-20%);
+  }
 }
