--- a/src/components/ProjectCard.Style.css
+++ b/src/components/ProjectCard.Style.css
@@ -1,8 +1,36 @@
 .cards-container {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.project-card {
+.card {
+  margin: 1rem;
+}
+
+.card-body {
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 1rem;
+}
+
+/* .btn {
+  height: 3.5rem;
+} */
+
+.git-link {
+  height: 40px;
+  width: 35px;
+}
+
+.site-link {
+  height: 40px;
+  width: 90px;
 }
