--- a/src/components/Socials.Style.css
+++ b/src/components/Socials.Style.css
@@ -1,10 +1,70 @@
+:root {
+  --clr-neon: rgb(243, 183, 71);
+  --clr-bg: hsl(323 21% 16%);
+  --clr-pink: rgb(231, 117, 231);
+}
+
 .socials-container {
   display: flex;
-
-  border-style: double;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  /* height: 300px; */
+  width: 80%;
+  /* height: 20%; */
 }
 
 a {
   justify-self: center;
-  color: rgb(231, 117, 231);
+  height: 100px;
+  width: 100px;
+  color: rgb(243, 183, 71);
+  border-radius: 20px;
+}
+
+.svg-container {
+  height: 80px;
+  width: 80px;
+  margin: 1em 1em;
+}
+
+.neon-button {
+  display: inline-block;
+  cursor: pointer;
+  text-decoration: none;
+  fill: var(--clr-neon);
+
+  /* filter: drop-shadow(
+    0 0 0.125em hsl(0 0% 100% / 0.3),
+    0 0 0.45em currentColor
+  ); */
+
+  /* box-shadow: inset 0 0 0.5em 0 var(--clr-neon), 0 0 0.5em 0 var(--clr-neon); */
+}
+
+.neon-button.dark {
+  filter: drop-shadow(0 0 00.2em rgb(243, 183, 71));
+}
+
+.neon-button:hover {
+  filter: drop-shadow(0 0.5rem 00.5em rgb(243, 183, 71));
+}
+
+.underglow {
+  height: 20px;
+  width: 80px;
+  background-color: var(--clr-neon);
+  transform: perspective(1em) rotateX(40deg) scale(1, 0.35);
+  filter: blur(1em);
+  opacity: 0.7;
+  margin-top: 20px;
+  margin-right: 0;
+}
+
+@media (min-width: 1100px) {
+  .socials-container {
+    flex-direction: column;
+    width: 20%;
+    /* height: 30%; */
+  }
 }
