--- a/src/components/subpages/About.Style.css
+++ b/src/components/subpages/About.Style.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   border-bottom: 10px solid black;
 }
@@ -13,4 +13,29 @@
   width: 100%;
   position: absolute !important;
   z-index: -1;
+}
+
+.about-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 70%;
+
+  margin-top: 2rem;
+}
+
+.about-body {
+  margin-top: 2rem;
+  margin-bottom: 4rem;
+  font-size: 1.25rem;
+}
+
+@media (max-width: 600px) {
+  .about-content {
+    max-width: 80%;
+  }
+
+  .about-body {
+    font-size: 1rem;
+  }
 }
