--- a/src/components/subpages/Contact.Style.css
+++ b/src/components/subpages/Contact.Style.css
@@ -1,6 +1,7 @@
 .contact-container {
   position: relative;
   display: flex;
+  flex-direction: column;
   height: 100vh;
   width: 100vw;
   border-bottom: 10px solid black;
