--- a/src/components/subpages/Landing.Style.css
+++ b/src/components/subpages/Landing.Style.css
@@ -19,33 +19,67 @@
   z-index: -1;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 90%;
+  height: 60%;
+}
+
+.banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .content {
   display: flex;
-  transform: translateX(-10%);
+  /* transform: translateX(-10%); */
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 80%;
   padding: 2em;
 }
 
 .header {
-  color: rgb(231, 117, 231);
+  color: rgb(243, 183, 71);
   font-family: "droid sans mono";
   margin-bottom: 3em;
+
+  font-size: clamp(1rem, 5vw, 2rem);
+
+  display: inline-block;
+
+  text-decoration: none;
+
+  position: relative;
 }
 
-.name {
-  font-size: clamp(1.5rem, 10vw, 4rem);
+.header.light {
+  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em rgb(243, 183, 71);
+
+  box-shadow: inset 0 0 0.5em 0 var(rgb(243, 183, 71)),
+    0 0 0.5em 0 var(rgb(243, 183, 71));
+}
+
+.landing-name {
+  font-size: clamp(1.2rem, 7vw, 4rem);
   font-family: "montserrat";
   font-weight: 800;
 }
 
 .title {
-  font-family: "montserrat";
+  font-family: "droid sans mono";
+  font-size: clamp(0.8rem, 3vw, 2rem);
 }
 
-.name.dark {
+.landing-name.dark {
   color: aliceblue;
 }
 
-.name.light {
+.landing-name.light {
   color: #6f6f6f;
 }
 
@@ -59,6 +93,12 @@
 
 @media (min-width: 500px) {
   .content {
-    transform: translateX(-20%);
+    /* transform: translateX(-20%); */
+  }
+}
+
+@media (min-width: 1100px) {
+  .main {
+    flex-direction: row;
   }
 }
