--- a/src/components/subpages/Contact.Style.css
+++ b/src/components/subpages/Contact.Style.css
@@ -2,6 +2,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
   height: 100vh;
   width: 100vw;
   border-bottom: 10px solid black;
@@ -12,4 +14,66 @@
   width: 100%;
   position: absolute !important;
   z-index: -1;
+}
+
+.contact-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 70%;
+  min-height: 70%;
+}
+
+.info-container {
+  display: flex;
+  border-bottom: 3px solid rgb(243, 183, 71);
+  justify-content: space-between;
+}
+
+.email-title {
+  font-family: "droid sans mono";
+}
+
+.email {
+}
+
+/* FORM BOXES */
+
+.ui-form {
+  max-width: 60vw;
+}
+
+.form-box {
+  border: 0;
+  width: 100%;
+  padding: 7px;
+  border-radius: 15px;
+}
+
+.contact-button-container {
+  display: flex;
+  width: 100%;
+  height: 10%;
+}
+
+.form-button {
+  background-color: rgb(243, 183, 71);
+  border: 0;
+  border-radius: 7px;
+  color: aliceblue;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin: 15px;
+}
+
+@media (max-width: 600px) {
+  .contact-form-container {
+    width: 80%;
+  }
+
+  .ui-form {
+    max-width: 80vw;
+  }
 }
