changed width of socials container so they dont become offset on mobile. changed size of email info on contact page

--- a/src/components/Socials.Style.css
+++ b/src/components/Socials.Style.css
@@ -10,7 +10,7 @@
   justify-content: space-around;
   align-items: center;
   /* height: 300px; */
-  width: 80%;
+  /* width: 80%; */
   /* height: 20%; */
 }
 
