--- a/src/components/ProjectCard.Style.css
+++ b/src/components/ProjectCard.Style.css
@@ -21,6 +21,12 @@
   margin-top: 1rem;
 }
 
+.card-text {
+  font-family: "montserrat";
+  line-height: 180%;
+  padding: 10px;
+}
+
 /* .btn {
   height: 3.5rem;
 } */
