--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -10,6 +10,10 @@
   border-bottom: 10px solid black;
 }
 
+.projects-header {
+  margin-top: 35px;
+}
+
 /* .header {
   color: rgb(231, 117, 231);
   font-family: "droid sans mono";
