--- a/src/components/Footer.Style.css
+++ b/src/components/Footer.Style.css
@@ -12,7 +12,7 @@
   justify-self: center;
   align-items: center;
   width: 60vw;
-  font-size: 1.125rem;
+  font-size: 1rem;
 }
 
 .footer-text-group {
@@ -21,9 +21,10 @@
 }
 
 .footer-icon {
-  height: 2rem;
-  width: 2rem;
-  margin-left: 5px;
+  height: 1.8rem;
+  width: 1.8rem;
+  margin-left: 7px;
+  transform: translateY(-2px);
 }
 
 .footer-link {
