--- a/src/components/Skills.Style.css
+++ b/src/components/Skills.Style.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding-bottom: 150px;
   /* display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
