--- a/src/components/subpages/Contact.Style.css
+++ b/src/components/subpages/Contact.Style.css
@@ -48,6 +48,7 @@
   width: 100%;
   padding: 7px;
   border-radius: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .contact-button-container {
@@ -66,6 +67,7 @@
   padding-top: 5px;
   padding-bottom: 5px;
   margin: 15px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 @media (max-width: 600px) {
