--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -38,6 +38,11 @@
 .project-card {
   /* max-height: 400px; */
   max-width: 600px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.cards-container {
+  margin-bottom: 150px;
 }
 
 .backgroundImage {
