--- a/src/components/subpages/Landing.Style.css
+++ b/src/components/subpages/Landing.Style.css
@@ -91,9 +91,13 @@
   color: #6f6f6f;
 }
 
-@media (min-width: 500px) {
+@media (max-width: 500px) {
   .content {
-    /* transform: translateX(-20%); */
+    width: 85%;
+    /* padding-left: 0; */
+  }
+  .banner {
+    /* padding-left: 15vw; */
   }
 }
 
