added animations to backgrounds when theme is changed

--- a/src/components/subpages/About.Style.css
+++ b/src/components/subpages/About.Style.css
@@ -1,6 +1,7 @@
 .about-container {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
