added light mode backgrounds to make text more readable, updated cv, changed margins on contact and about sections

--- a/src/components/Socials.Style.css
+++ b/src/components/Socials.Style.css
@@ -48,8 +48,10 @@ a {
   filter: drop-shadow(0 0 00.2em rgb(243, 183, 71));
 }
 
-.neon-button:hover {
-  filter: drop-shadow(0 0.5rem 00.5em rgb(243, 183, 71));
+@media (hover: hover) {
+  .neon-button:hover {
+    filter: drop-shadow(0 0.5rem 00.5em rgb(243, 183, 71));
+  }
 }
 
 .underglow {
