--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -14,27 +14,6 @@
   margin-top: 35px;
 }
 
-/* .header {
-  color: rgb(231, 117, 231);
-  font-family: "droid sans mono";
-  margin-bottom: 3em;
-
-  font-size: clamp(1rem, 5vw, 2rem);
-
-  display: inline-block;
-
-  text-decoration: none;
-
-  position: relative;
-}
-
-.header.light {
-  text-shadow: 0 0 0.125em hsl(0 0% 100% / 0.3), 0 0 0.45em rgb(231, 117, 231);
-
-  box-shadow: inset 0 0 0.5em 0 var(rgb(231, 117, 231)),
-    0 0 0.5em 0 var(rgb(231, 117, 231));
-} */
-
 .project-card {
   /* max-height: 400px; */
   max-width: 600px;
@@ -42,7 +21,7 @@
 }
 
 .cards-container {
-  margin-bottom: 150px;
+  margin-bottom: 50px;
 }
 
 .backgroundImage {
@@ -50,4 +29,16 @@
   width: 100%;
   position: absolute !important;
   z-index: -1;
+}
+
+@media (min-width: 2500px) {
+  .project-card {
+    max-width: 800px;
+  }
+}
+
+@media (max-width: 2499px) {
+  .cards-container {
+    max-width: 80%;
+  }
 }
