--- a/src/components/subpages/Contact.Style.css
+++ b/src/components/subpages/Contact.Style.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   height: 100vh;
   width: 100vw;
   border-bottom: 10px solid black;
@@ -32,9 +32,6 @@
 
 .email-title {
   font-family: "droid sans mono";
-}
-
-.email {
 }
 
 /* FORM BOXES */
@@ -70,9 +67,13 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
+.contact-form-container {
+  padding: 3rem;
+}
+
 @media (max-width: 600px) {
   .contact-form-container {
-    width: 80%;
+    width: 90%;
   }
 
   .ui-form {
