--- a/src/components/subpages/Project.Style.css
+++ b/src/components/subpages/Project.Style.css
@@ -42,3 +42,9 @@
     max-width: 80%;
   }
 }
+
+@media (hover: hover) {
+  .neon-button:hover {
+    filter: drop-shadow(0 0.5rem 00.5em rgb(243, 183, 71));
+  }
+}
